# vibe-clock

./: .gitignore  CLAUDE.md  LICENSE  README.es.md  README.ja.md  README.md  README.zh-CN.md  SKILL.md  action.yml  entry_point.py  pyproject.toml  vibe-clock.spec
.github/workflows/: create-release.yml  release.yml
api/: index.py
scripts/: bump_version.py
tests/: test_aggregator.py  test_collectors.py  test_scheduler.py  test_svg.py
vibe_clock/: __init__.py  aggregator.py  cli.py  config.py  formatting.py  models.py  sanitizer.py  scheduler.py
vibe_clock/collectors/: __init__.py  base.py  claude_code.py  codex.py  gemini_cli.py  opencode.py
vibe_clock/svg/: __init__.py  bars.py  card.py  donut.py  heatmap.py  hourly.py  token_bars.py  weekly.py
