[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-clock"
version = "1.4.0"
description = "Track AI coding agent usage across Claude Code, Codex, Gemini CLI, and OpenCode"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.25",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
vibe-clock = "vibe_clock.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
